Add color blinking, add ship rotation, add movement to point (for tests purpose), fix game initialization

--- a/Assets/UnityApplication.asmdef
+++ b/Assets/UnityApplication.asmdef
@@ -10,7 +10,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "LinkEngine.dll"
+        "LinkEngine.dll",
+        "Test.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
